arreglando el index

--- a/public/src/app/index/carrito/carrito.component.css
+++ b/public/src/app/index/carrito/carrito.component.css
@@ -38,8 +38,8 @@
 	color: #1D1D1B;
 }
 .btn-seguir-comprando:hover{
-	border-color: #ffc009;
-	color: #ffc009;
+	border-color: #ff16ce;
+	color: #ff16ce;
 }
 
 .row-w-80 {
