--- a/public/src/app/index/index.component.html
+++ b/public/src/app/index/index.component.html
@@ -5,7 +5,7 @@
   </div>
   <div class="col-sm-4"></div>
   <div class="opc text-center col-sm-2">
-    <a href="#/perfil" class="card-text-grey" style="background-color:#ffc009; padding: 5%;">{{user.user_name}}</a>
+    <a href="#/perfil" class="card-text-grey" style="background-color:#ff16ce; padding: 5%;">{{user.user_name}}</a>
   </div>
 </div>
 
@@ -13,7 +13,7 @@
 <div class="row row-w-100 no-margin-row">
   <div class="col-sm-4"></div>
   <div class="col-sm-4 text-center">
-    <img class="logo-home" data-toggle="modal" data-target="#modalLogin" src="../../assets/img/logoMYDATE.jpeg">
+    <img class="logo-home" data-toggle="modal" data-target="#modalLogin" src="../../assets/img/mydateLogo.PNG">
   </div>
   
 </div>
@@ -30,16 +30,16 @@
           <li data-target="#myCarousel" data-slide-to="3" class="botones-carrusel"></li>
         </ol>
         <div class="item active">
-          <img src="../../assets/img/11.jpg" style="width: 100%; height: 80%;">
+          <img src="../../assets/img/11.jpg" style="width: 100%; height: 750px;">
         </div>
         <div class="item text-center" >
-          <img src="../../assets/img/22.jpg" style="width: 100%; height: 80%;">
+          <img src="../../assets/img/22.jpg" style="width: 100%; height: 750px;">
         </div>
         <div class="item text-center" >
-          <img src="../../assets/img/33.jpg" style="width: 100%; height: 80%; ">
+          <img src="../../assets/img/33.jpg" style="width: 100%; height: 750px; ">
         </div>
         <div class="item text-center" >
-          <img src="../../assets/img/44.jpg" style="width: 100%; height: 80%;">
+          <img src="../../assets/img/44.jpg" style="width: 100%; height: 750px;">
         </div>
       </div>
        <a class="left carousel-control" href="#myCarousel" data-slide="prev">
@@ -53,7 +53,7 @@
   <!-- *** #Carousel *** -->
   <div class="text-center " style="margin-top: 8rem;">
     <h1 class="centro">
-      Crea tu cita perfecta! 
+      ¡Crea tu cita perfecta! 
     </h1>
   </div>
 
@@ -84,7 +84,7 @@
 </ng-container>
 
 <div class="text-center" >
-  <button data-toggle="modal" data-target="#modalLogin" class="btn btn-success" style="color: white; background-color: #ffc009; width: 20rem;">
+  <button data-toggle="modal" data-target="#modalLogin" class="btn btn-success" style="color: white; background-color: #ff16ce; width: 20rem;">
     Crear Ahora
   </button>
 </div>
