--- a/public/src/app/pages/list-prod/list-prod.component.css
+++ b/public/src/app/pages/list-prod/list-prod.component.css
@@ -76,8 +76,8 @@
   }
   
   .icon-bar{
-    background: #ffc009 !important;
-    color: #ffc009 !important;
+    background: #ff16ce !important;
+    color: #ff16ce !important;
   }
   
   .opc4 {
@@ -385,18 +385,18 @@
   
   
   .opc:hover {
-    color: #ffc009;
+    color: #ff16ce;
   }
   
   .opcMenu:hover{
-    color: #ffc009;
+    color: #ff16ce;
   
   }
   
   .opc1:hover {
-    color: #ffc009;
+    color: #ff16ce;
     padding-bottom: 2%;
-    border-bottom: #ffc009 solid 6px;
+    border-bottom: #ff16ce solid 6px;
   
   
   
@@ -635,7 +635,7 @@
     position: fixed;
     top: 0;
     width: 100%;
-    box-shadow: 0 2px 5px #ffc009;
+    box-shadow: 0 2px 5px #ff16ce;
     z-index: 999;
   }
   
@@ -841,7 +841,7 @@
   }
   
   .card-servicios:hover {
-    background-color: #ffc009;
+    background-color: #ff16ce;
   }
   
   /* Detecta hover del parent y aplica estilo al child */
@@ -1375,7 +1375,7 @@
   .btn-OK {
     min-height: 5rem;
     color: #ffffff;
-    background-color: #ffc009;
+    background-color: #ff16ce;
     height:7rem;
     border: none;
   }
