--- a/public/src/app/pages/login/login.component.html
+++ b/public/src/app/pages/login/login.component.html
@@ -1,4 +1,4 @@
-<body style="background-color: #ffc009;">
+<body style="background-color: #ff16ce;">
 
     <div class=" login-page">
         <a href="/index" >
@@ -54,7 +54,7 @@
 
 <style>
     .btn-login:hover{
-        background-color: #ffc009;
+        background-color: #ff16ce;
     }
 
 </style>
