--- a/public/src/app/pages/register/register.component.html
+++ b/public/src/app/pages/register/register.component.html
@@ -98,7 +98,7 @@
                                     </div>
                                     <style>
                                         .btn-registrar:hover {
-                                            background-color: #ffc009;
+                                            background-color: #ff16ce;
                                         }
                                     </style>
 
@@ -132,6 +132,6 @@
 
 <style>
     .body {
-        background-color: #ffc009;
+        background-color: #ff16ce;
     }
 </style>
