--- a/public/src/app/modules/perfil/perfil/perfil.component.css
+++ b/public/src/app/modules/perfil/perfil/perfil.component.css
@@ -125,8 +125,8 @@
 }
 
 .icon-bar{
-  background: #ffc009 !important;
-  color: #ffc009 !important;
+  background: #ff16ce !important;
+  color: #ff16ce !important;
 }
 
 .opc4 {
@@ -436,18 +436,18 @@ margin: 0;
 
 
 .opc:hover {
-  color: #ffc009;
+  color: #ff16ce;
 }
 
 .opcMenu:hover{
-  color: #ffc009;
+  color: #ff16ce;
 
 }
 
 .opc1:hover {
-  color: #ffc009;
+  color: #ff16ce;
   padding-bottom: 2%;
-  border-bottom: #ffc009 solid 6px;
+  border-bottom: #ff16ce solid 6px;
 
 
 
@@ -677,7 +677,7 @@ margin: 0;
   position: fixed;
   top: 0;
   width: 100%;
-  box-shadow: 0 2px 5px #ffc009;
+  box-shadow: 0 2px 5px #ff16ce;
   z-index: 999;
 }
 
@@ -883,7 +883,7 @@ img.socialnet {
 }
 
 .card-servicios:hover {
-  background-color: #ffc009;
+  background-color: #ff16ce;
 }
 
 /* Detecta hover del parent y aplica estilo al child */
@@ -1417,7 +1417,7 @@ img.socialnet {
 .btn-OK {
   min-height: 5rem;
   color: #ffffff;
-  background-color: #ffc009;
+  background-color: #ff16ce;
   height:7rem;
   border: none;
 }
@@ -1715,7 +1715,7 @@ border-style: none;
   } 
 
   .sesion-perfil{
-    background-color: #ffc009;
+    background-color: #ff16ce;
   }
 
 .container44  .btn2 {
