proxys arreglados, se recupera los 2 servicios

--- a/public/src/app/index/index.component.html
+++ b/public/src/app/index/index.component.html
@@ -75,7 +75,7 @@
       <div class="col-sm-4 col-md-4 col-lg-4 paddding-0">
         <div class="card-servicios" id="cardServ3">
           <img class="img-icons-servicios mb-4 mx-auto" id="icoServ3" [src]="imgSrc3" alt="DORMITORIOS">
-          <p class="card-text-grey">PELICULAS</p>
+          <p class="card-text-grey">MUSICA</p>
         </div>
       </div>
     </div>
