--- a/public/src/app/modules/products/products/products.component.html
+++ b/public/src/app/modules/products/products/products.component.html
@@ -111,8 +111,28 @@
   BUSCAR CANCIONES
 </h1>
 
-<input type="text" name="message_name" required placeholder="Nombre" class="form-control input-contact"
-  [(ngModel)]="busqueda2">
+<input type="text" name="message_cancion" required placeholder="Nombre" 
+  [(ngModel)]="busqueda3" required #message_cancion="ngModel">
 <button (click)="consultar2()" class="btn btn-success">
   BUSCAR
 </button>
+
+<div class="container mt-2">
+  <!--   <div class="card card-block mb-2">
+      <h4 class="card-title">Card 1</h4>
+      <p class="card-text">Welcom to bootstrap card styles</p>
+      <a href="#" class="btn btn-primary">Submit</a>
+    </div>   -->
+
+  <div class="row">
+    <div class="col-md-3 col-sm-6">
+      <div class="card card-block" *ngFor="let musica of musica">
+        <h4 class="card-title text-right"><i class="material-icons">{{musica.track}}</i></h4>
+        <img src="https://static.pexels.com/photos/7096/people-woman-coffee-meeting.jpg" alt="Photo of sunset">
+        <h5 class="card-title mt-3 mb-3">Sierra Web Development • Owner</h5>
+        <p class="card-text">This is a company that builds websites, web apps and e-commerce solutions.</p>
+      </div>
+
+    </div>
+  </div>
+</div>
