generando el pdf

--- a/public/src/app/modules/products/products/products.component.css
+++ b/public/src/app/modules/products/products/products.component.css
@@ -67,3 +67,62 @@
 {
     margin: 0 0 11px;
 }
+
+.img1{
+    height:150px;
+    width:100%;
+  }
+  
+  div [class^="col-"]{
+    padding-left:5px;
+    padding-right:5px;
+  }
+  .card1{
+    transition:0.5s;
+    cursor:pointer;
+  }
+  .card-title1{  
+    font-size:15px;
+    transition:1s;
+    cursor:pointer;
+  }
+  .card-title1 i{  
+    font-size:15px;
+    transition:1s;
+    cursor:pointer;
+    color:#ffa710
+  }
+  .card-title1 i:hover{
+    transform: scale(1.25) rotate(100deg); 
+    color:#18d4ca;
+    
+  }
+  .card1:hover{
+    transform: scale(1.05);
+    box-shadow: 10px 10px 15px rgba(0,0,0,0.3);
+  }
+  .card-text1{
+    height:80px;  
+  }
+  
+  .card1::before, .card1::after {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    transform: scale3d(0, 0, 1);
+    transition: transform .3s ease-out 0s;
+    background: rgba(255, 255, 255, 0.1);
+    content: '';
+    pointer-events: none;
+  }
+  .card1::before {
+    transform-origin: left top;
+  }
+  .card1::after {
+    transform-origin: right bottom;
+  }
+  .card1:hover::before, .card:hover::after, .card:focus::before, .card:focus::after {
+    transform: scale3d(1, 1, 1);
+  }
