--- a/public/src/app/modules/products/products/products.component.html
+++ b/public/src/app/modules/products/products/products.component.html
@@ -111,21 +111,28 @@
   BUSCAR CANCIONES
 </h1>
 
-<input type="text" name="message_cancion" required placeholder="Nombre" 
-  [(ngModel)]="busqueda3" required #message_cancion="ngModel">
+<input type="text" name="message_cancion" required placeholder="Nombre" [(ngModel)]="busqueda3" required
+  #message_cancion="ngModel">
 <button (click)="consultar2()" class="btn btn-success">
   BUSCAR
 </button>
-<div class="container mt-2">
+<ng-container>
   <div class="row">
-    <div class="col-md-3 col-sm-6">
-      <div class="card card-block" *ngFor="let musica of musica">
-        <h4 class="card-title text-right"><i class="material-icons">{{musica.track}}</i></h4>
-        <img src="https://static.pexels.com/photos/7096/people-woman-coffee-meeting.jpg" alt="Photo of sunset">
-        <h5 class="card-title mt-3 mb-3">Sierra Web Development • Owner</h5>
-        <p class="card-text">This is a company that builds websites, web apps and e-commerce solutions.</p>
+    <div class="col-md-3 col-sm-6" *ngFor="let musica of musica">
+      <div class="card1 card-block" >
+        <h4 class="card-title1 text-right"><i class="material-icons">settings</i></h4>
+        <a href="{{musica.track.url}}">
+          <img class="img1" src="{{musica.track.images.coverarthq}}" alt="Photo of sunset">
+        </a>
+        <h5 class="card-title1 mt-3 mb-3 text-center">{{musica.track.title}}</h5>
+        <p class="card-text1 text-center" >{{musica.track.subtitle}}</p>
+        <button (click)="estadoNuevo3(musica)" type="button" class="btn btn-success content-center" style="margin-left:10rem ;">Seleccionar</button>
       </div>
+
+
 
     </div>
   </div>
-</div>
+</ng-container>
+
+<button (click)="generatePdf()">Open PDF</button>
