--- a/public/src/app/pages/login/login.component.html
+++ b/public/src/app/pages/login/login.component.html
@@ -1,15 +1,15 @@
-<body style="background-color: #ff16ce;">
+<body style="background-color: #ffffff;">
 
     <div class=" login-page">
         <a href="/index" >
-            <img style="width: 30%; margin-left: 3rem; padding-top: 3rem" src="../../assets/img/logo_inicio.svg">
+            <img style="width: 30%; margin-left: 3rem; padding-top: 3rem" src="../../assets/img/mydateLogo.PNG">
         </a>
         <div class="content">
             <div class="container">
                 <div class="row">
                     <div class="col-md-4 col-sm-6 col-md-offset-4 col-sm-offset-3">
                         <form method="#" action="#">
-                            <div class="card card-hidden">
+                            <div class="card card-hidden" style="background:pink">
                                 <div class="header text-center">Login
                                     <br>
                                 </div>
