--- a/public/src/app/shared/footer/footer.component.html
+++ b/public/src/app/shared/footer/footer.component.html
@@ -26,7 +26,7 @@
             </ul>
         </nav> -->
         <p class="copyright pull-right">
-            &copy; {{test | date: 'yyyy'}} Nikola
+            &copy; {{test | date: 'yyyy'}} My Date♥
         </p>
     </div>
 </footer>
